src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail08.jova
class Test{

}

class Main {

  public int main() {

    int x;
    Test test;
    x = print(test);


    return 0;
  }

}